--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body{
     justify-content: space-around;
     align-items: center;
     background-color: rgb(189, 189, 189);
-    box-shadow: -5px 5px gray;
+    box-shadow: -5px 5px rgb(105, 105, 105);
 }
 .displaycontainer{
     border: 2px solid rgb(95, 95, 95);
@@ -24,7 +24,7 @@ body{
     height: 100px;
     border-radius: 20px;
     background-color: rgb(199, 214, 255);
-    box-shadow: 0px 2px gray;
+    box-shadow: inset 0px 5px gray;
     display: flex;
     align-items: center;
     justify-content: end;
