--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body{
 }
 .displaycontainer{
     border: 2px solid rgb(95, 95, 95);
-    width:450px;
+    width: 450px;
     height: 100px;
     border-radius: 20px;
     background-color: rgb(199, 214, 255);
@@ -54,8 +54,9 @@ body{
     flex: 1;
     display: flex;
     align-items: center;
-    justify-content: space-evenly
+    justify-content: space-evenly;
 }
+
 .button , .clear,.erase{
     display: flex;
     justify-content: space-around;
